# duplicord

./: .gitignore  README.md  pyproject.toml
duplicord/: __main__.py
